--- a/en/infrastructure.html
+++ b/en/infrastructure.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
-<link href="../assets/css/app.c16adecfc4e4fbc94fcd.css" rel="stylesheet"></head>
+<link href="../assets/css/app.73fd5ab6b7f9d5f8974c.css" rel="stylesheet"></head>
 <body class="infrastructure-page">
 <header class="header">
   <div class="container">
@@ -63,29 +63,22 @@
     </div>
     <div class="description_info">
       <h2 class="description_info-title">
-        Збір коштів на відновлення зруйнованого житла та інфраструктури
+        Money collection for ruined buildings’ reconstruction and infrastructure
       </h2>
       <div class="description_info-text">
         <p>
-          Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не.
+          The war suspended the possibility of supplying the most important thing to Ukraine - medicines and food. Many
+          people are left without a roof over their heads - they are provided with shelter, but there are not enough
+          resources. We are doing everything we can to prevent a humanitarian crisis. Join the rescue.
         </p>
         <p>
-          Долучайтеся до порятунку. Війна призупинила можливість поставок до України найважливішого - медикаментів та
-          харчів. Багато людей залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми
-          робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
+          According to KSE’s and volunteers’ information approximately 200 educational institutions, 30 medical
+          institutions, 8 churches, 1600 residential buildings, 19 administrative buildings, 23 plants, 12 airfields,
+          5 heat power plants and 5 hydro power plants were partially / fully destroyed.
         </p>
         <p>
-          Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
-
-
+          Besides 15 000 km highways, 5 000 km roads, 350 bridges were partially or fully destroyed. You can join in
+          raising funds to rebuild damaged housing and infrastructure
         </p>
       </div>
     </div>
@@ -94,7 +87,7 @@
   <!--Блок опис FINISH-->
 
   <!--Банківський переказ-->
-  <div class="bank_block js-bank-block" id="block-bank" >
+  <div class="bank_block js-bank-block" id="block-bank">
     <div class="bank_block-title title-1">Bank Transfer</div>
     <div class="bank_block-list js-bank-list" data-type="infrastructure"></div>
   </div>
@@ -125,5 +118,5 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="../assets/js/vendors.c16adecfc4e4fbc94fcd.js"></script><script type="text/javascript" src="../assets/js/app.c16adecfc4e4fbc94fcd.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.73fd5ab6b7f9d5f8974c.js"></script><script type="text/javascript" src="../assets/js/app.73fd5ab6b7f9d5f8974c.js"></script></body>
 </html>
