--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Council of freedom</title>
-<link href="assets/css/app.c16adecfc4e4fbc94fcd.css" rel="stylesheet"></head>
+<link href="assets/css/app.73fd5ab6b7f9d5f8974c.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -171,7 +171,7 @@
             кілометрів залізничних шляхів, 350 мостів та переходів.</p>
           <p>Ви можете долучитися до збору коштів на відновлення зруйнованих будівель та інфраструктури</p>
         </div>
-        <div class="">
+        <div>
           <a href="infrastructure.html" class="block_one-info_btn btn">Надіслати кошти</a>
         </div>
       </div>
@@ -245,6 +245,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.c16adecfc4e4fbc94fcd.js"></script><script type="text/javascript" src="assets/js/app.c16adecfc4e4fbc94fcd.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.73fd5ab6b7f9d5f8974c.js"></script><script type="text/javascript" src="assets/js/app.73fd5ab6b7f9d5f8974c.js"></script></body>
 
 </html>
