--- a/infrastructure.html
+++ b/infrastructure.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
-<link href="assets/css/app.c16adecfc4e4fbc94fcd.css" rel="stylesheet"></head>
+<link href="assets/css/app.73fd5ab6b7f9d5f8974c.css" rel="stylesheet"></head>
 <body class="infrastructure-page">
 <header class="header">
   <div class="container">
@@ -66,25 +66,21 @@
       </h2>
       <div class="description_info-text">
         <p>
-          Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
+          Війна призупинила можливість постачання до України найважливішого - медикаментів та харчів. Багато людей
           залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не.
+          попередити гуманітарну кризу. Долучайтеся до порятунку.
         </p>
         <p>
-          Долучайтеся до порятунку. Війна призупинила можливість поставок до України найважливішого - медикаментів та
-          харчів. Багато людей залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми
-          робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
+          За даними KSE та волонтерів від початку війни в Україні було пошкоджено та/або повністю зруйновано понад
+          200 освітніх закладів, 30 закладів охорони здоров'я, 8 церков, 1600 житлових будинків, 19 адміністративних
+          будівель, 23 заводи, 12 летовищ, 5 ТЕС та ГЕС.
         </p>
         <p>
-          Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
-
-
+          Окрім цього зруйновано або виведено з ладу більше 15 тисяч кілометрів автомобільних доріг, 5 тисяч
+          кілометрів залізничних шляхів, 350 мостів та переходів.
+        </p>
+        <p>
+          Ви можете долучитися до збору коштів на відновлення зруйнованого житла та інфраструктури
         </p>
       </div>
     </div>
@@ -93,7 +89,7 @@
   <!--Блок опис FINISH-->
 
   <!--Банківський переказ-->
-  <div class="bank_block js-bank-block js-target-block" id="block-bank" >
+  <div class="bank_block js-bank-block js-target-block" id="block-bank">
     <div class="bank_block-title title-1 " data-text="Банківський переказ">Банківський переказ</div>
     <div class="bank_block-list js-bank-list" data-type="infrastructure"></div>
   </div>
@@ -124,5 +120,5 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.c16adecfc4e4fbc94fcd.js"></script><script type="text/javascript" src="assets/js/app.c16adecfc4e4fbc94fcd.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.73fd5ab6b7f9d5f8974c.js"></script><script type="text/javascript" src="assets/js/app.73fd5ab6b7f9d5f8974c.js"></script></body>
 </html>
