Infrastructure page translation

--- a/src/en/index.html
+++ b/src/en/index.html
@@ -92,7 +92,7 @@
 
   <div class="blocks">
     <!--Block 1-->
-    <div class="block_one js-target-block">
+    <div class="block_one js-target-block" id="block-1">
       <div class="block_one-info">
         <div class="block_one-info_title ">Fundraising for humanitarian help</div>
         <div class="block_one-info_text">
@@ -111,7 +111,7 @@
       </div>
     </div>
     <!--Block 2-->
-    <div class="block_one js-target-block">
+    <div class="block_one js-target-block" id="block-2">
       <div class="block_one-info">
         <div class="block_one-info_title ">Humanitarian aid collection</div>
         <div class="block_one-info_text">
@@ -134,7 +134,7 @@
       </div>
     </div>
     <!--Block 3-->
-    <div class="block_one js-target-block">
+    <div class="block_one js-target-block" id="block-3">
       <div class="block_one-info">
         <div class="block_one-info_title ">Humanitarian aid receiving</div>
         <div class="block_one-info_text">
@@ -156,7 +156,7 @@
       </div>
     </div>
     <!--Block 4-->
-    <div class="block_one js-target-block">
+    <div class="block_one js-target-block" id="block-4">
       <div class="block_one-info">
         <div class="block_one-info_title "
              data-text="Money collection for ruined buildings’ reconstruction and infrastructure">
