--- a/en/index.html
+++ b/en/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Council of freedom</title>
-<link href="../assets/css/app.73fd5ab6b7f9d5f8974c.css" rel="stylesheet"></head>
+<link href="../assets/css/app.75c41dd6a9d296215bbd.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -90,7 +90,7 @@
 
   <div class="blocks">
     <!--Block 1-->
-    <div class="block_one js-target-block">
+    <div class="block_one js-target-block" id="block-1">
       <div class="block_one-info">
         <div class="block_one-info_title ">Fundraising for humanitarian help</div>
         <div class="block_one-info_text">
@@ -109,7 +109,7 @@
       </div>
     </div>
     <!--Block 2-->
-    <div class="block_one js-target-block">
+    <div class="block_one js-target-block" id="block-2">
       <div class="block_one-info">
         <div class="block_one-info_title ">Humanitarian aid collection</div>
         <div class="block_one-info_text">
@@ -132,7 +132,7 @@
       </div>
     </div>
     <!--Block 3-->
-    <div class="block_one js-target-block">
+    <div class="block_one js-target-block" id="block-3">
       <div class="block_one-info">
         <div class="block_one-info_title ">Humanitarian aid receiving</div>
         <div class="block_one-info_text">
@@ -154,7 +154,7 @@
       </div>
     </div>
     <!--Block 4-->
-    <div class="block_one js-target-block">
+    <div class="block_one js-target-block" id="block-4">
       <div class="block_one-info">
         <div class="block_one-info_title "
              data-text="Money collection for ruined buildings’ reconstruction and infrastructure">
@@ -239,6 +239,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="../assets/js/vendors.73fd5ab6b7f9d5f8974c.js"></script><script type="text/javascript" src="../assets/js/app.73fd5ab6b7f9d5f8974c.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.75c41dd6a9d296215bbd.js"></script><script type="text/javascript" src="../assets/js/app.75c41dd6a9d296215bbd.js"></script></body>
 
 </html>
