--- a/en/index.html
+++ b/en/index.html
@@ -6,8 +6,9 @@
   <link rel="icon" href="/favicon.ico">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Council of freedom</title>
-<link href="../assets/css/app.75c41dd6a9d296215bbd.css" rel="stylesheet"></head>
+  <meta name="description" content="Volunteer public organization Council of Freedom - Humanitarian and medical assistance to Ukrainians affected by Russian aggression."/>
+  <title>Humanitarian and medical assistance to Ukrainians affected by Russian aggression - Freedom Council</title>
+<link href="../assets/css/app.181f9b628705bd94129a.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -239,6 +240,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="../assets/js/vendors.75c41dd6a9d296215bbd.js"></script><script type="text/javascript" src="../assets/js/app.75c41dd6a9d296215bbd.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.181f9b628705bd94129a.js"></script><script type="text/javascript" src="../assets/js/app.181f9b628705bd94129a.js"></script></body>
 
 </html>
