--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Council of freedom</title>
-<link href="assets/css/app.75c41dd6a9d296215bbd.css" rel="stylesheet"></head>
+  <meta name="description" content="Волонтерська громадська організація Рада Свободи - Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії."/>
+  <title>Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії - Рада Свободи</title>
+<link href="assets/css/app.181f9b628705bd94129a.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -245,6 +246,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.75c41dd6a9d296215bbd.js"></script><script type="text/javascript" src="assets/js/app.75c41dd6a9d296215bbd.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.181f9b628705bd94129a.js"></script><script type="text/javascript" src="assets/js/app.181f9b628705bd94129a.js"></script></body>
 
 </html>
