--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Council of freedom</title>
+  <meta name="description" content="Волонтерська громадська організація Рада Свободи - Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії."/>
+  <title>Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії - Рада Свободи</title>
 </head>
 
 <body>
