--- a/src/en/index.html
+++ b/src/en/index.html
@@ -8,7 +8,8 @@
   <link rel="icon" href="/favicon.ico">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Council of freedom</title>
+  <meta name="description" content="Volunteer public organization Council of Freedom - Humanitarian and medical assistance to Ukrainians affected by Russian aggression."/>
+  <title>Humanitarian and medical assistance to Ukrainians affected by Russian aggression - Freedom Council</title>
 </head>
 
 <body>
