--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <link rel="stylesheet" type="text/css" href="assets/scss/main.scss"/>
   <!--deleteend-->
   <link rel="icon" href="/favicon.ico">
+  <link rel="canonical" href="https://councilfreedom.com/"/>
+  <meta name="google-site-verification" content="83QIW2_nHMFXrShPVLi6DcOHiabcX2un0EIbuA3H4Yg" />
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
