--- a/src/en/index.html
+++ b/src/en/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="assets/scss/main.scss"/>
   <!--deleteend-->
   <link rel="icon" href="/favicon.ico">
+  <link rel="canonical" href="https://councilfreedom.com/en/"/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Volunteer public organization Council of Freedom - Humanitarian and medical assistance to Ukrainians affected by Russian aggression."/>
