New pages send and get aid

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,13 @@
   <!--deleteend-->
   <link rel="icon" href="/favicon.ico">
   <link rel="canonical" href="https://councilfreedom.com/"/>
-  <meta name="google-site-verification" content="83QIW2_nHMFXrShPVLi6DcOHiabcX2un0EIbuA3H4Yg" />
+  <meta name="google-site-verification" content="83QIW2_nHMFXrShPVLi6DcOHiabcX2un0EIbuA3H4Yg"/>
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Волонтерська громадська організація Рада Свободи - Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії."/>
+  <meta name="description"
+        content="Волонтерська громадська організація Рада Свободи - Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії."/>
   <title>Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії - Рада Свободи</title>
 </head>
 
@@ -50,13 +51,13 @@
   <!--NAVIGATION-->
   <div class="page_nav js-nav-container">
     <div class="page_nav-item">
-      <div  class="page_nav-item_text" data-target-block="block-1">Збір засобів для гуманітарної допомоги</div>
+      <a href="about-humanitarian-aid.html" class="page_nav-item_text">Збір засобів для гуманітарної допомоги</a>
     </div>
     <div class="page_nav-item">
-      <div  class="page_nav-item_text" data-target-block="block-2">Надіслати гуманітарну допомогу</div>
+      <a href="send-humanitarian.html" class="page_nav-item_text">Надіслати гуманітарну допомогу</a>
     </div>
     <div class="page_nav-item">
-      <div  class="page_nav-item_text" data-target-block="block-3">Отримати гуманітарну допомогу</div>
+      <a href="get-humanitarian.html" class="page_nav-item_text">Отримати гуманітарну допомогу</a>
     </div>
     <div class="page_nav-item">
       <a href="infrastructure.html" class="page_nav-item_text">Збір коштів на відновлення зруйнованого житла та
@@ -67,7 +68,7 @@
       <div class="page_nav-item_text" data-target-block="block-bank">Банківський переказ</div>
     </div>
   </div>
-  <!--NAVIGATION FINISH-->
+  <!--NAVIGATION END-->
 
   <div class="width_block black">
     <div class="width_block-banner">
@@ -92,9 +93,7 @@
     <!--Block 1-->
     <div class="block_one js-target-block" id="block-1">
       <div class="block_one-info">
-        <div class="block_one-info_title " data-text="Збір коштів на гуманітарну допомогу">Збір коштів на
-          гуманітарну допомогу
-        </div>
+        <div class="block_one-info_title">Збір коштів на гуманітарну допомогу</div>
         <div class="block_one-info_text">
           <p>
             Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
@@ -103,7 +102,7 @@
           </p>
         </div>
         <div class="">
-          <button class="block_one-info_btn btn js-bank-block-trigger">Надіслати кошти</button>
+          <a href="about-humanitarian-aid.html" class="block_one-info_btn btn">Надіслати кошти</a>
         </div>
       </div>
       <div class="block_one-img">
@@ -114,7 +113,7 @@
     <!--Block 2-->
     <div class="block_one js-target-block" id="block-2">
       <div class="block_one-info">
-        <div class="block_one-info_title " data-text="Збір гуманітарної допомоги">Збір гуманітарної
+        <div class="block_one-info_title">Збір гуманітарної
           допомоги
         </div>
         <div class="block_one-info_text">
@@ -177,7 +176,7 @@
           <p>Ви можете долучитися до збору коштів на відновлення зруйнованих будівель та інфраструктури</p>
         </div>
         <div>
-          <a href="infrastructure.html" class="block_one-info_btn btn">Надіслати кошти</a>
+          <a href="pages/infrastructure.html" class="block_one-info_btn btn">Надіслати кошти</a>
         </div>
       </div>
       <div class="block_one-img">
@@ -220,7 +219,7 @@
     </div>
   </div>
 
-  <div class="bank_block js-bank-block js-target-block" id="block-bank" >
+  <div class="bank_block js-bank-block js-target-block" id="block-bank">
     <div class="bank_block-title title-1 " data-text="Банківський переказ">Банківський переказ</div>
     <div class="bank_block-list js-bank-list" data-type="index"></div>
   </div>
