--- a/src/pages/about-humanitarian-aid.html
+++ b/src/pages/about-humanitarian-aid.html
@@ -2,7 +2,7 @@
 <html lang="ua">
 <head>
   <!--deletestart-->
-  <link rel="stylesheet" type="text/css" href="assets/scss/main.scss"/>
+  <link rel="stylesheet" type="text/css" href="../assets/scss/main.scss"/>
   <!--deleteend-->
   <meta charset="UTF-8">
   <meta name="viewport"
@@ -19,7 +19,7 @@
     </a>
 
     <div class="lang">
-      <a href="/en/infrastructure.html" class="lang-item">en</a>
+      <a href="/en/about-humanitarian-aid.html" class="lang-item">en</a>
       <div class="lang-item active">ua</div>
     </div>
 
@@ -38,8 +38,8 @@
 
   <!--NAVIGATION-->
   <div class="page_nav js-nav-container">
-    <div class="page_nav-item">
-      <a href="/" class="page_nav-item_text" data-target-block="block-1">Збір засобів для гуманітарної допомоги</a>
+    <div class="page_nav-item active">
+      <div class="page_nav-item_text">Збір коштів для гуманітарної допомоги</div>
     </div>
     <div class="page_nav-item">
       <a href="/" class="page_nav-item_text" data-target-block="block-2">Надіслати гуманітарну допомогу</a>
@@ -47,9 +47,10 @@
     <div class="page_nav-item">
       <a href="/" class="page_nav-item_text" data-target-block="block-3">Отримати гуманітарну допомогу</a>
     </div>
-    <div class="page_nav-item active">
-      <div class="page_nav-item_text">Збір коштів на відновлення зруйнованого житла та інфраструктури
-      </div>
+    <div class="page_nav-item">
+      <a href="infrastructure.html" class="page_nav-item_text">Збір коштів на відновлення зруйнованого житла та
+        інфраструктури
+      </a>
     </div>
     <div class="page_nav-item">
       <div class="page_nav-item_text" data-target-block="block-bank">Банківський переказ</div>
@@ -60,29 +61,25 @@
   <!--Блок опис-->
   <section class="description">
     <div class="description_img">
-      <img src="/assets/img/infrastructure-descr-img.png" alt="infrastructure description image">
+      <img src="/assets/img/about-humanitarian-img.png" alt="about humanitarian image">
     </div>
     <div class="description_info">
       <h2 class="description_info-title">
-        Збір коштів на відновлення зруйнованого житла та інфраструктури
+        Збір коштів для гуманітарної допомоги
       </h2>
       <div class="description_info-text">
-        <p>
-          Війна призупинила можливість постачання до України найважливішого - медикаментів та харчів. Багато людей
+        <p>Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
           залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку.
+          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
+          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
+          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
         </p>
         <p>
-          За даними KSE та волонтерів від початку війни в Україні було пошкоджено та/або повністю зруйновано понад
-          200 освітніх закладів, 30 закладів охорони здоров'я, 8 церков, 1600 житлових будинків, 19 адміністративних
-          будівель, 23 заводи, 12 летовищ, 5 ТЕС та ГЕС.
-        </p>
-        <p>
-          Окрім цього зруйновано або виведено з ладу більше 15 тисяч кілометрів автомобільних доріг, 5 тисяч
-          кілометрів залізничних шляхів, 350 мостів та переходів.
-        </p>
-        <p>
-          Ви можете долучитися до збору коштів на відновлення зруйнованого житла та інфраструктури
+          Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
+          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
+          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
+          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
+          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
         </p>
       </div>
     </div>
@@ -90,12 +87,13 @@
   </section>
   <!--Блок опис FINISH-->
 
-  <!--Банківський переказ-->
+  <!--Банківські перекази-->
   <div class="bank_block js-bank-block js-target-block" id="block-bank">
     <div class="bank_block-title title-1 " data-text="Банківський переказ">Банківський переказ</div>
-    <div class="bank_block-list js-bank-list" data-type="infrastructure"></div>
+    <div class="bank_block-list js-bank-list" data-type="index"></div>
   </div>
-  <!--Банківський переказ FINISH-->
+  <!--Банківські перекази КІНЕЦЬ-->
+
 </div>
 
 
@@ -106,7 +104,7 @@
     </a>
 
     <div class="lang">
-      <a href="/en/infrastructure.html" class="lang-item">en</a>
+      <a href="/en/about-humanitarian-aid.html" class="lang-item">en</a>
       <div class="lang-item active">ua</div>
     </div>
 
