--- a/src/pages/en/index.html
+++ b/src/pages/en/index.html
@@ -46,6 +46,7 @@
     <div class="arr_btn down js-next-screen"></div>
   </div>
 
+  <!--NAVIGATION-->
   <div class="page_nav js-nav-container">
     <div class="page_nav-item">
       <div class="page_nav-item_text" data-target-block="block-1">Fundraising for humanitarian help</div>
@@ -65,6 +66,7 @@
       <div class="page_nav-item_text" data-target-block="block-bank">Bank Transfer</div>
     </div>
   </div>
+  <!--NAVIGATION END-->
 
   <div class="width_block black">
     <div class="width_block-banner">
