New pages send and get aid (en)

--- a/src/index.html
+++ b/src/index.html
@@ -176,7 +176,7 @@
           <p>Ви можете долучитися до збору коштів на відновлення зруйнованих будівель та інфраструктури</p>
         </div>
         <div>
-          <a href="pages/infrastructure.html" class="block_one-info_btn btn">Надіслати кошти</a>
+          <a href="infrastructure.html" class="block_one-info_btn btn">Надіслати кошти</a>
         </div>
       </div>
       <div class="block_one-img">
