--- a/src/pages/about-humanitarian-aid.html
+++ b/src/pages/about-humanitarian-aid.html
@@ -38,20 +38,22 @@
 
   <!--NAVIGATION-->
   <div class="page_nav js-nav-container">
+
     <div class="page_nav-item active">
       <div class="page_nav-item_text">Збір коштів для гуманітарної допомоги</div>
     </div>
     <div class="page_nav-item">
-      <a href="/" class="page_nav-item_text" data-target-block="block-2">Надіслати гуманітарну допомогу</a>
+      <a href="send-humanitarian.html" class="page_nav-item_text">Надіслати гуманітарну допомогу</a>
     </div>
     <div class="page_nav-item">
-      <a href="/" class="page_nav-item_text" data-target-block="block-3">Отримати гуманітарну допомогу</a>
+      <a href="get-humanitarian.html" class="page_nav-item_text">Отримати гуманітарну допомогу</a>
     </div>
     <div class="page_nav-item">
       <a href="infrastructure.html" class="page_nav-item_text">Збір коштів на відновлення зруйнованого житла та
         інфраструктури
       </a>
     </div>
+
     <div class="page_nav-item">
       <div class="page_nav-item_text" data-target-block="block-bank">Банківський переказ</div>
     </div>
