--- a/src/pages/en/index.html
+++ b/src/pages/en/index.html
@@ -49,13 +49,13 @@
   <!--NAVIGATION-->
   <div class="page_nav js-nav-container">
     <div class="page_nav-item">
-      <div class="page_nav-item_text" data-target-block="block-1">Fundraising for humanitarian help</div>
+      <a href="about-humanitarian-aid.html" class="page_nav-item_text">Fundraising for humanitarian help</a>
     </div>
     <div class="page_nav-item">
-      <div class="page_nav-item_text" data-target-block="block-2">Humanitarian aid collection</div>
+      <a href="send-humanitarian.html" class="page_nav-item_text">Humanitarian aid collection</a>
     </div>
     <div class="page_nav-item">
-      <div class="page_nav-item_text" data-target-block="block-3">Humanitarian aid receiving</div>
+      <a href="get-humanitarian.html" class="page_nav-item_text">Humanitarian aid receiving</a>
     </div>
     <div class="page_nav-item">
       <a href="infrastructure.html" class="page_nav-item_text">Money collection for ruined buildings’ reconstruction and
@@ -107,7 +107,7 @@
           </p>
         </div>
         <div class="">
-          <button class="block_one-info_btn btn js-bank-block-trigger">Money transfers</button>
+          <a href="about-humanitarian-aid.html" class="block_one-info_btn btn">Money transfers</a>
         </div>
       </div>
       <div class="block_one-img">
