--- a/src/pages/infrastructure.html
+++ b/src/pages/infrastructure.html
@@ -39,16 +39,17 @@
   <!--NAVIGATION-->
   <div class="page_nav js-nav-container">
     <div class="page_nav-item">
-      <a href="/" class="page_nav-item_text" data-target-block="block-1">Збір засобів для гуманітарної допомоги</a>
+      <a href="about-humanitarian-aid.html" class="page_nav-item_text">Збір коштів для гуманітарної допомоги</a>
     </div>
     <div class="page_nav-item">
-      <a href="/" class="page_nav-item_text" data-target-block="block-2">Надіслати гуманітарну допомогу</a>
+      <a href="send-humanitarian.html" class="page_nav-item_text">Надіслати гуманітарну допомогу</a>
     </div>
     <div class="page_nav-item">
-      <a href="/" class="page_nav-item_text" data-target-block="block-3">Отримати гуманітарну допомогу</a>
+      <a href="get-humanitarian.html" class="page_nav-item_text">Отримати гуманітарну допомогу</a>
     </div>
     <div class="page_nav-item active">
-      <div class="page_nav-item_text">Збір коштів на відновлення зруйнованого житла та інфраструктури
+      <div href="infrastructure.html" class="page_nav-item_text">Збір коштів на відновлення зруйнованого житла та
+        інфраструктури
       </div>
     </div>
     <div class="page_nav-item">
