--- a/src/pages/get-humanitarian.html
+++ b/src/pages/get-humanitarian.html
@@ -45,7 +45,7 @@
       <a href="send-humanitarian.html" class="page_nav-item_text">Надіслати гуманітарну допомогу</a>
     </div>
     <div class="page_nav-item active">
-      <div href="get-humanitarian.html" class="page_nav-item_text">Отримати гуманітарну допомогу</div>
+      <div class="page_nav-item_text">Отримати гуманітарну допомогу</div>
     </div>
     <div class="page_nav-item">
       <a href="infrastructure.html" class="page_nav-item_text">Збір коштів на відновлення зруйнованого житла та
