--- a/en/index.html
+++ b/en/index.html
@@ -4,11 +4,12 @@
 <head>
   
   <link rel="icon" href="/favicon.ico">
+  <link rel="canonical" href="https://councilfreedom.com/en/"/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Volunteer public organization Council of Freedom - Humanitarian and medical assistance to Ukrainians affected by Russian aggression."/>
   <title>Humanitarian and medical assistance to Ukrainians affected by Russian aggression - Freedom Council</title>
-<link href="../assets/css/app.181f9b628705bd94129a.css" rel="stylesheet"></head>
+<link href="../assets/css/app.e569f577772e6fcd6834.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -43,15 +44,16 @@
     <div class="arr_btn down js-next-screen"></div>
   </div>
 
+  <!--NAVIGATION-->
   <div class="page_nav js-nav-container">
     <div class="page_nav-item">
-      <div class="page_nav-item_text" data-target-block="block-1">Fundraising for humanitarian help</div>
+      <a href="about-humanitarian-aid.html" class="page_nav-item_text">Fundraising for humanitarian help</a>
     </div>
     <div class="page_nav-item">
-      <div class="page_nav-item_text" data-target-block="block-2">Humanitarian aid collection</div>
+      <a href="send-humanitarian.html" class="page_nav-item_text">Humanitarian aid collection</a>
     </div>
     <div class="page_nav-item">
-      <div class="page_nav-item_text" data-target-block="block-3">Humanitarian aid receiving</div>
+      <a href="get-humanitarian.html" class="page_nav-item_text">Humanitarian aid receiving</a>
     </div>
     <div class="page_nav-item">
       <a href="infrastructure.html" class="page_nav-item_text">Money collection for ruined buildings’ reconstruction and
@@ -62,6 +64,7 @@
       <div class="page_nav-item_text" data-target-block="block-bank">Bank Transfer</div>
     </div>
   </div>
+  <!--NAVIGATION END-->
 
   <div class="width_block black">
     <div class="width_block-banner">
@@ -102,7 +105,7 @@
           </p>
         </div>
         <div class="">
-          <button class="block_one-info_btn btn js-bank-block-trigger">Money transfers</button>
+          <a href="about-humanitarian-aid.html" class="block_one-info_btn btn">Money transfers</a>
         </div>
       </div>
       <div class="block_one-img">
@@ -240,6 +243,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="../assets/js/vendors.181f9b628705bd94129a.js"></script><script type="text/javascript" src="../assets/js/app.181f9b628705bd94129a.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.e569f577772e6fcd6834.js"></script><script type="text/javascript" src="../assets/js/app.e569f577772e6fcd6834.js"></script></body>
 
 </html>
