--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
   
   <link rel="icon" href="/favicon.ico">
+  <link rel="canonical" href="https://councilfreedom.com/"/>
+  <meta name="google-site-verification" content="83QIW2_nHMFXrShPVLi6DcOHiabcX2un0EIbuA3H4Yg"/>
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Волонтерська громадська організація Рада Свободи - Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії."/>
+  <meta name="description"
+        content="Волонтерська громадська організація Рада Свободи - Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії."/>
   <title>Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії - Рада Свободи</title>
-<link href="assets/css/app.181f9b628705bd94129a.css" rel="stylesheet"></head>
+<link href="assets/css/app.e569f577772e6fcd6834.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -46,13 +49,13 @@
   <!--NAVIGATION-->
   <div class="page_nav js-nav-container">
     <div class="page_nav-item">
-      <div  class="page_nav-item_text" data-target-block="block-1">Збір засобів для гуманітарної допомоги</div>
+      <a href="about-humanitarian-aid.html" class="page_nav-item_text">Збір засобів для гуманітарної допомоги</a>
     </div>
     <div class="page_nav-item">
-      <div  class="page_nav-item_text" data-target-block="block-2">Надіслати гуманітарну допомогу</div>
+      <a href="send-humanitarian.html" class="page_nav-item_text">Надіслати гуманітарну допомогу</a>
     </div>
     <div class="page_nav-item">
-      <div  class="page_nav-item_text" data-target-block="block-3">Отримати гуманітарну допомогу</div>
+      <a href="get-humanitarian.html" class="page_nav-item_text">Отримати гуманітарну допомогу</a>
     </div>
     <div class="page_nav-item">
       <a href="infrastructure.html" class="page_nav-item_text">Збір коштів на відновлення зруйнованого житла та
@@ -63,7 +66,7 @@
       <div class="page_nav-item_text" data-target-block="block-bank">Банківський переказ</div>
     </div>
   </div>
-  <!--NAVIGATION FINISH-->
+  <!--NAVIGATION END-->
 
   <div class="width_block black">
     <div class="width_block-banner">
@@ -88,9 +91,7 @@
     <!--Block 1-->
     <div class="block_one js-target-block" id="block-1">
       <div class="block_one-info">
-        <div class="block_one-info_title " data-text="Збір коштів на гуманітарну допомогу">Збір коштів на
-          гуманітарну допомогу
-        </div>
+        <div class="block_one-info_title">Збір коштів на гуманітарну допомогу</div>
         <div class="block_one-info_text">
           <p>
             Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
@@ -99,7 +100,7 @@
           </p>
         </div>
         <div class="">
-          <button class="block_one-info_btn btn js-bank-block-trigger">Надіслати кошти</button>
+          <a href="about-humanitarian-aid.html" class="block_one-info_btn btn">Надіслати кошти</a>
         </div>
       </div>
       <div class="block_one-img">
@@ -110,7 +111,7 @@
     <!--Block 2-->
     <div class="block_one js-target-block" id="block-2">
       <div class="block_one-info">
-        <div class="block_one-info_title " data-text="Збір гуманітарної допомоги">Збір гуманітарної
+        <div class="block_one-info_title">Збір гуманітарної
           допомоги
         </div>
         <div class="block_one-info_text">
@@ -216,7 +217,7 @@
     </div>
   </div>
 
-  <div class="bank_block js-bank-block js-target-block" id="block-bank" >
+  <div class="bank_block js-bank-block js-target-block" id="block-bank">
     <div class="bank_block-title title-1 " data-text="Банківський переказ">Банківський переказ</div>
     <div class="bank_block-list js-bank-list" data-type="index"></div>
   </div>
@@ -246,6 +247,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.181f9b628705bd94129a.js"></script><script type="text/javascript" src="assets/js/app.181f9b628705bd94129a.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.e569f577772e6fcd6834.js"></script><script type="text/javascript" src="assets/js/app.e569f577772e6fcd6834.js"></script></body>
 
 </html>
