New pages send and get aid (en)

--- a/src/pages/en/infrastructure.html
+++ b/src/pages/en/infrastructure.html
@@ -39,13 +39,13 @@
   <!--NAVIGATION-->
   <div class="page_nav js-nav-container">
     <div class="page_nav-item">
-      <a href="/en/" class="page_nav-item_text" data-target-block="block-1">Fundraising for humanitarian help</a>
+      <a href="about-humanitarian-aid.html" class="page_nav-item_text" data-target-block="block-1">Fundraising for humanitarian help</a>
     </div>
     <div class="page_nav-item">
-      <a href="/en/" class="page_nav-item_text" data-target-block="block-2">Humanitarian aid collection</a>
+      <a href="send-humanitarian.html" class="page_nav-item_text" data-target-block="block-2">Humanitarian aid collection</a>
     </div>
     <div class="page_nav-item">
-      <a href="/en/" class="page_nav-item_text" data-target-block="block-3">Humanitarian aid receiving</a>
+      <a href="get-humanitarian.html" class="page_nav-item_text" data-target-block="block-3">Humanitarian aid receiving</a>
     </div>
     <div class="page_nav-item active">
       <div class="page_nav-item_text">Money collection for ruined buildings’ reconstruction and
