--- a/en/infrastructure.html
+++ b/en/infrastructure.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
-<link href="../assets/css/app.e569f577772e6fcd6834.css" rel="stylesheet"></head>
+<link href="../assets/css/app.a763773efe3e3504b543.css" rel="stylesheet"></head>
 <body class="infrastructure-page">
 <header class="header">
   <div class="container">
@@ -37,13 +37,13 @@
   <!--NAVIGATION-->
   <div class="page_nav js-nav-container">
     <div class="page_nav-item">
-      <a href="/en/" class="page_nav-item_text" data-target-block="block-1">Fundraising for humanitarian help</a>
+      <a href="about-humanitarian-aid.html" class="page_nav-item_text" data-target-block="block-1">Fundraising for humanitarian help</a>
     </div>
     <div class="page_nav-item">
-      <a href="/en/" class="page_nav-item_text" data-target-block="block-2">Humanitarian aid collection</a>
+      <a href="send-humanitarian.html" class="page_nav-item_text" data-target-block="block-2">Humanitarian aid collection</a>
     </div>
     <div class="page_nav-item">
-      <a href="/en/" class="page_nav-item_text" data-target-block="block-3">Humanitarian aid receiving</a>
+      <a href="get-humanitarian.html" class="page_nav-item_text" data-target-block="block-3">Humanitarian aid receiving</a>
     </div>
     <div class="page_nav-item active">
       <div class="page_nav-item_text">Money collection for ruined buildings’ reconstruction and
@@ -118,5 +118,5 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="../assets/js/vendors.e569f577772e6fcd6834.js"></script><script type="text/javascript" src="../assets/js/app.e569f577772e6fcd6834.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.a763773efe3e3504b543.js"></script><script type="text/javascript" src="../assets/js/app.a763773efe3e3504b543.js"></script></body>
 </html>
