Buttons text fixes

--- a/src/index.html
+++ b/src/index.html
@@ -64,9 +64,6 @@
         інфраструктури
       </a>
     </div>
-    <div class="page_nav-item">
-      <div class="page_nav-item_text" data-target-block="block-bank">Банківський переказ</div>
-    </div>
   </div>
   <!--NAVIGATION END-->
 
@@ -204,8 +201,8 @@
             Council of Freedom - об’єднання вільних духом людей з активною життєвою позицією.
           </p>
           <p>
-            Громадська організація Рада Свободи була створена для реалізації благодійних, соціальних та гуманітарних
-            проектів.
+            Громадська організація Рада Свободи була створена у 2010 році для реалізації благодійних,
+            соціальних та гуманітарних проєктів.
           </p>
           <p>
             Нашою головною ідеологією завжди було - зробити людей трохи щасливішими, а світ добрішими та кращим.
@@ -217,11 +214,6 @@
         </div>
       </div>
     </div>
-  </div>
-
-  <div class="bank_block js-bank-block js-target-block" id="block-bank">
-    <div class="bank_block-title title-1 " data-text="Банківський переказ">Банківський переказ</div>
-    <div class="bank_block-list js-bank-list" data-type="index"></div>
   </div>
 
 </div>
