--- a/src/pages/en/get-humanitarian.html
+++ b/src/pages/en/get-humanitarian.html
@@ -77,7 +77,7 @@
       <button class="btn js-help-btn"
               data-link="https://docs.google.com/forms/d/1YE_PXlSm7SXEeEkyzHv8_vlqBxXSqhmEph6pBKG8Azg/edit"
       >
-        Help me
+        Fill in the form for humanitarian aid
       </button>
     </div>
     <!--ФОРМА ГУМАНІТАРНОЇ ДОПОМОГИ КІНЕЦЬ-->
