--- a/src/pages/en/send-humanitarian.html
+++ b/src/pages/en/send-humanitarian.html
@@ -78,7 +78,7 @@
       <button class=" btn js-help-btn"
               data-link="https://docs.google.com/forms/d/1bZ2TJV67Nb1gPdgU3bdjZJl7GpOEy6SH_89tV149DKY/edit"
       >
-        To send humanitarian aid
+        Fill out the humanitarian aid form
       </button>
     </div>
     <!--ФОРМА ГУМАНІТАРНОЇ ДОПОМОГИ КІНЕЦЬ-->
