--- a/src/pages/get-humanitarian.html
+++ b/src/pages/get-humanitarian.html
@@ -86,7 +86,7 @@
       <button class="btn js-help-btn"
               data-link="https://docs.google.com/forms/d/1YE_PXlSm7SXEeEkyzHv8_vlqBxXSqhmEph6pBKG8Azg/edit"
       >
-        Потребую допомоги
+        Заповнити анкету на отримання гуманітарної допомоги
       </button>
     </div>
     <!--ФОРМА ГУМАНІТАРНОЇ ДОПОМОГИ КІНЕЦЬ-->
