--- a/src/pages/send-humanitarian.html
+++ b/src/pages/send-humanitarian.html
@@ -86,7 +86,7 @@
       <button class=" btn js-help-btn"
               data-link="https://docs.google.com/forms/d/1bZ2TJV67Nb1gPdgU3bdjZJl7GpOEy6SH_89tV149DKY/edit"
       >
-        Збір коштів на гуманітарну допомогу
+        Заповнити анкету для надання гуманітарної допомоги
       </button>
     </div>
     <!--ФОРМА ГУМАНІТАРНОЇ ДОПОМОГИ КІНЕЦЬ-->
